View Issue Details

IDProjectCategoryView StatusLast Update
0030853Open CASCADEOCCT:Visualizationpublic2019-07-29 09:59
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
Product Version7.4.0 
Target Version7.4.0Fixed in Version7.4.0 
Summary0030853: Visualization, AIS_ViewController - fix 1 pixel Y shift while zooming
DescriptionDue to bug in math converting Y-down mouse coordinates into Y-up, AIS_ViewController::handleZoom() leads to continuous 1 pixels shift error.
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot required

Relationships

child of 0030507 closedbugmaster Visualization - introduce AIS_ViewController 

Activities

git

2019-07-26 06:01

administrator   ~0085876

Branch CR30853 has been created by kgv.

SHA-1: 20c2d590243deaea6f0440aa1073035f63f07338


Detailed log of new commits:

Author: kgv
Date: Fri Jul 26 05:59:39 2019 +0300

    0030853: Visualization, AIS_ViewController - fix 1 pixel Y shift while zooming
    
    Fixed error in math converting Y-down mouse coordinates into Y-up within AIS_ViewController::handleZoom().
    Added flags ToStickToRayOnZoom()/ToStickToRayOnRotation() enabled by default,
    which will project picked point onto ray at mouse cursor to preserve focus on zoom out.

kgv

2019-07-26 06:03

developer   ~0085877

Please raise the patch.

bugmaster

2019-07-27 11:40

administrator   ~0085915

Combination -
OCCT branch : CR30853
master SHA - 20c2d590243deaea6f0440aa1073035f63f07338
5f5b1aed1c6e139bbd34314eca77ae7abcd8895c
Products branch : master SHA - 15b969be38b5ee777dca74665beb7562bdb8b468
was compiled on Linux, MacOS and Windows platforms and tested in optimize mode.

Number of compiler warnings:
No new/fixed warnings

Regressions/Differences/Improvements:
No regressions/differences

CPU differences:
Debian80-64:
OCCT
Total CPU difference: 16222.87000000003 / 16218.199999999973 [+0.03%]
Products
Total CPU difference: 10492.690000000053 / 10488.820000000036 [+0.04%]
Windows-64-VC14:
OCCT
---
Products
Total CPU difference: 12137.3125 / 12174.703125 [-0.31%]


Image differences :
No differences that require special attention

Memory differences :
No differences that require special attention

git

2019-07-29 09:59

administrator   ~0085930

Branch CR30853 has been deleted by inv.

SHA-1: 20c2d590243deaea6f0440aa1073035f63f07338

Related Changesets

occt: master 9460f8c0

2019-07-26 02:59:39

kgv


Committer: bugmaster Details Diff
0030853: Visualization, AIS_ViewController - fix 1 pixel Y shift while zooming

Fixed error in math converting Y-down mouse coordinates into Y-up within AIS_ViewController::handleZoom().
Added flags ToStickToRayOnZoom()/ToStickToRayOnRotation() enabled by default,
which will project picked point onto ray at mouse cursor to preserve focus on zoom out.
Affected Issues
0030853
mod - src/AIS/AIS_ViewController.cxx Diff File
mod - src/AIS/AIS_ViewController.hxx Diff File

Issue History

Date Modified Username Field Change
2019-07-26 05:40 kgv New Issue
2019-07-26 05:40 kgv Assigned To => kgv
2019-07-26 06:01 git Note Added: 0085876
2019-07-26 06:03 kgv Relationship added child of 0030507
2019-07-26 06:03 kgv Note Added: 0085877
2019-07-26 06:03 kgv Assigned To kgv => bugmaster
2019-07-26 06:03 kgv Status new => resolved
2019-07-26 06:03 kgv Status resolved => reviewed
2019-07-27 11:23 bugmaster Test case number => Not required
2019-07-27 11:40 bugmaster Note Added: 0085915
2019-07-27 11:40 bugmaster Status reviewed => tested
2019-07-28 11:02 bugmaster Changeset attached => occt master 9460f8c0
2019-07-28 11:02 bugmaster Status tested => verified
2019-07-28 11:02 bugmaster Resolution open => fixed
2019-07-29 09:59 git Note Added: 0085930